# akt-cli

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  release.yml
src/akt/: __init__.py  cli.py  client.py  commands.py  config.py  output.py  registry.py  resources.py
tests/: test_builders.py
tests/integration/: conftest.py  test_live.py
tests/unit/: test_builders.py  test_client_multipart.py
