[project]
name = "akt-cli"
version = "0.2.0"
description = "akt — a CLI toolbox to fully drive an Akaunting accounting instance"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "AsyncAlchemist" }
]
requires-python = ">=3.12"
keywords = ["akaunting", "accounting", "cli", "invoices", "bills", "api"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Environment :: Console",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
    "requests>=2.31",
]

[project.urls]
Homepage = "https://github.com/AsyncAlchemist/akt-cli"
Repository = "https://github.com/AsyncAlchemist/akt-cli"
Issues = "https://github.com/AsyncAlchemist/akt-cli/issues"

[project.scripts]
akt = "akt.cli:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

# Distribution is "akt-cli" but the import package + command stay "akt".
[tool.uv.build-backend]
module-name = "akt"
module-root = "src"

[tool.pyright]
extraPaths = ["src"]
reportMissingModuleSource = false

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: offline tests with no network access (default CI)",
    "integration: drive the CLI against a live Akaunting instance (needs AKT_* env)",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=5.0",
]
